Fix spacing for title and placed in container with icon

--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -8,7 +8,14 @@ nav {
 
 h1 {
   letter-spacing: 1px;
-  font-size: 2em;
+  padding-left: 20px;
+  font-size: 2.3em;
+}
+
+.banner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
